# my-first-3d-engine

./: .clangd  .gitignore  CMakeLists.txt  readme.md
.cache/clangd/index/: component.hpp.1F95A9967754CB08.idx  cube.cpp.D70171EE29A2D767.idx  functions.cpp.A2D69F8E9D2BE5CC.idx  functions.hpp.7E0D30B6750667C9.idx  glad.c.3C6F8DA82F646152.idx  glad.h.409AE3CFA7598519.idx  gltfloader.cpp.8E966C922D7117B9.idx  gltfloader.hpp.07F81AB0062E4AF6.idx  imconfig.h.7B51437EC6E0CB70.idx  imgui.cpp.D444154F22AA5C5E.idx  imgui.h.82AC67CF931EB48B.idx  imgui_internal.h.E01FDF77B3EEF53E.idx  joint.hpp.3ADCE4AB6FD47379.idx  json.hpp.2F204A39B275701A.idx  khrplatform.h.A3131356E494FF73.idx  light.hpp.A159FE865EA8DC2E.idx  main.cpp.25D3CB6B521B7ADC.idx  mesh.cpp.63380D824CE910F2.idx  mesh.hpp.CB4C8C64446A6AA5.idx  primitives.hpp.8049E5E452B6A134.idx  renderer.cpp.D7D15E850D166C53.idx  renderer.hpp.940E32F01DCC9EDF.idx  renderobject.hpp.770F9209CE25BB8A.idx  scene.hpp.09B11F6AF1FFB159.idx  skinnedmeshrenderer.hpp.689A9A334EFF3F06.idx  sphere.cpp.7CE98B7F0D699F1C.idx  stb_image.h.6FF121EAC094F227.idx  stb_image_write.h.F2190B391C46EF2E.idx  tiny_gltf.h.30E0AD08AA5C74F2.idx  transform.hpp.35A1D98432F3823B.idx
models/: lion.gltf  maybecaracter2rig2.gltf
shaders/: basic.frag  basic.vert
src/: ambientlight.hpp  component.hpp  cube.cpp  functions.cpp  functions.hpp  gltfloader.cpp  gltfloader.hpp  gridplane.cpp  gridplane.hpp  interpolated.hpp  joint.hpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  meshrenderer.hpp  primitives.hpp  renderer.cpp  renderer.hpp  renderobject.hpp  scene.hpp  skinnedmeshrenderer.hpp  sphere.cpp  transform.hpp  ui.hpp
